Breakpoint concept and copyright image

--- a/bundles/org.eclipse.jdt.doc.user/concepts/clocdbug.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/clocdbug.htm
@@ -16,13 +16,8 @@ Debug</SPAN>
  button), execution of the program can be controlled by the debugger.</P>
 <P>&nbsp;<br>
 
-<img src = ../ngibmcpy.gif width="195" height="12">
-
-</P>
-
-
-
-
+<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
+</p>
 
 </BODY>
 </HTML>
