--- a/bundles/org.eclipse.jdt.doc.user/concepts/cremdbug.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cremdbug.htm
@@ -18,13 +18,8 @@ Note:	Launching a Java program in debug mode is VM-specific.</P>
 </DIV>
 <P>&nbsp;<br>
 
-<img src = ../ngibmcpy.gif width="195" height="12">
-
-</P>
-
-
-
-
+<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
+</p>
 
 </BODY>
 </HTML>
