Breakpoint installed overlay

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-143.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-143.htm
@@ -11,12 +11,12 @@
 <H1 CLASS="Head">
 Using breakpoints</H1>
 <P CLASS="Para">
-A breakpoint causes the execution of a thread to suspend at the location where the breakpoint is set. </P>
+A breakpoint causes the execution of a thread or virtual machine to suspend at the location where the breakpoint is set. </P>
 <P CLASS="Para">
 Breakpoints can be enabled and disabled via their context menus in the Breakpoints view. </P>
 <UL CLASS="UnorderedList">
 <LI CLASS="Item">
-When a breakpoint is enabled, it will cause a thread to suspend whenever it is hit. Enabled breakpoints are indicated with a blue circle. Enabled breakpoints that are successfully installed in a class in a VM at runtime are indicated with a green circle.</LI>
+When a breakpoint is enabled, it will cause a thread to suspend whenever it is hit. Enabled breakpoints are indicated with a blue circle. Enabled breakpoints that are successfully installed in a class in a VM at runtime are indicated with a checkmark overlay.</LI>
 <LI CLASS="Item">
 When a breakpoint is disabled, it will not cause threads to suspend. Disabled breakpoints are indicated with a white circle. </LI>
 </UL>
@@ -27,9 +27,6 @@ Debugging breakpoints are displayed in the marker bar in the editor area and in 
 <img src = ../ngibmcpy.gif width="195" height="12">
 
 </P>
-
-
-
 
 
 </BODY>
