*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/concepts/cantsup.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cantsup.htm
@@ -4,33 +4,36 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Ant support</title>
+<title>Ant Support</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
-Ant support</H1>
+Ant Support</H1>
 <P CLASS="Para">
-Ant is a build tool similar to the &quot;make&quot; feature of C++, but written in Java.
-Ant is an open-source project.</P>
-<P CLASS="Para">You can create and run Ant scripts
-from the workbench. These scripts can operate on resources in the file system as well as
-resources in the workspace.&nbsp;&nbsp;</P>
+Ant is a build tool similar to the &quot;make&quot; feature, but written in Java.
+It is an Apache open source project.&nbsp;See <a href="http://jakarta.apache.org/ant/index.html" target="_blank">http://jakarta.apache.org/ant/index.html</a>
+for more details.  </P>
 <P CLASS="Para">
-More information about Ant is available at <a href="http://jakarta.apache.org/ant/index.html" target="_blank">jakarta.apache.org/ant/index.html</a>.</P>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="concepts-22.htm"><br>
-Builds</a><br>
-<a href="../concepts/cexttools.htm">External tools</a>
-</p>
+The Ant support allows you to create and run Ant scripts
+from the workbench.&nbsp;
+These Ant scripts can operate on resources in the file system as well as
+resources in the workspace. Output from an Ant script is displayed in the log console view.
+</P>
+<P CLASS="Para">
+You can add classes to the Ant classpath and add Ant tasks and types in the <b>Workbench->External Tools->Ant</b> preferences.
+</P>
+
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+<a href="../concepts/concepts-22.htm">Builds</a></p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="../tasks/tasks-89.htm">Running Ant</a><br>
-<a href="../tasks/tasks-85.htm">Expanding the Ant classpath</a><br>
-<a href="../tasks/tasks-86.htm">Using a different version of Ant</a><br>
-<a href="../tasks/tasks-83.htm">Adding new tasks and types</a><br>
+<a href="../tasks/tasks-89.htm">Running Ant</a></p>
+<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
+<br><a href="../reference/ref-35.htm">Log console view</a>
+<br><a href="../reference/rantprefs.htm">Ant preferences</a>
 </p>
 <p>
-<a href="../hglegal2002.htm">
-<img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
 </p>
 
 </BODY>
