--- a/bundles/org.eclipse.platform.doc.user/concepts/cexttools.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cexttools.htm
@@ -16,6 +16,8 @@ External tools</h1>
 batch files, Ant build files, etc. using the Eclipse Workbench. You can
 save these external tool configurations and run them at a later time.
 
+<p CLASS="Para">Output from external tools is displayed in the log 
+console view.</p>
 
 <p CLASS="Para">You can add external tools as part of the build process
 for a project. These external tools will run in the specified order every
@@ -89,21 +91,12 @@ then "none".
 <p CLASS="Para"><b>${ant_target:&lt;target name>}</b> - The name of a target
 in an Ant build file to perform.</blockquote>
 
-<h2>
-Log Console view</h2>
-The Log Console view shows the output from a running external tool. From
-the preferences dialog box, you can change the default settings for the
-Log Console view using the External Tools preference page.
-<p><img SRC="../images/Image500_log_view.jpg" height=198 width=284 alt="Log Console">
-<p>The toolbar of the Log Console view contains the following buttons:
-<p><b>Show Output Structure Tree</b> - Displays a tree list of the output
-structure is supported by the external tool running.
-<p><b>Show Output of Selected Element Only</b> - Displays only the output
-applicable for the currently selected element in the output structure tree.
-<p><b>Clear Output</b> - Removes all output from the view.
 <p><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159>
-<br><a href="concepts-22.htm">Builds</a>
 <br><a href="cantsup.htm">Ant support</a>
+<br><a href="concepts-22.htm">Builds</a>
+<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" >
+<br><a href="../reference/ref-35.htm">Log console view</a>
+</p>
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
 <br><a href="../tasks/tasks-90.htm">Running external tools</a>
 <br><a href="../tasks/tasks-89.htm">Running Ant</a>
