--- a/bundles/org.eclipse.platform.doc.user/concepts/cpropview.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cpropview.htm
@@ -11,7 +11,8 @@
 <H1 CLASS="Head">
 Properties view</H1>
 <P CLASS="Para">
-This view displays property names and basic properties of a selected resource.
+The properties view displays property names and values for a selected item such
+as a resource.
 Here is an example:</P>
 <P CLASS="Para">
 <img align="texttop" border="0" src="../images/Image240_props_view.jpg"  alt="Picture of a Properties sheet with 3 columns, including a column for property and a column for value."></P>
