*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-26.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-26.htm
@@ -12,6 +12,7 @@
 <p CLASS="Para">In the Concurrent Versions System (CVS) team programming environment, 
   team members do all of their work in their own workbenches, isolated from others. 
   Eventually they will want to share their work. They do this via a CVS Repository.</p>
+<h2 CLASS="Para">Branches</h2>
 <p CLASS="Para">CVS uses a branch model to support multiple courses of work that 
   are somwhat isolated from each other but still highly interdependant. Branches 
   are where a development team shares and integrates ongoing work. A branch can 
@@ -21,6 +22,7 @@
   work of others as the project evolves. A special branch, refered to as HEAD, 
   represents the main course of work in the repository (HEAD is often refered 
   to as the trunk).</p>
+<h2 CLASS="Para">Sharing Work</h2>
 <div CLASS="Topic">
   <p CLASS="Para">As team members produce new work, they share this work by <i>committing</i> 
     those changes to the branch. Similarly, when they wish to get the latest available 
@@ -69,7 +71,9 @@
     the branch represents the current project state: at any point a team member 
     could take the branch contents as a basis for new work.</p>
   <p CLASS="Para">The ideal work flow therefore is one in which the branch integrity 
-    is preserved. The ideal work flow proceeds as follows:</p>
+    is preserved. </p>
+  <h3 CLASS="Para">Ideal Flow Enumerated</h3>
+  <p CLASS="Para">The ideal work flow proceeds as follows:</p>
   <ol>
     <li>
       <p CLASS="Para">Start fresh: Before starting work, get caught up with the 
@@ -117,19 +121,17 @@
 
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="../tasks/tasks-92.htm"><br>
-Creating a repository location</a><a href="../tasks/tasks-96.htm"><br>
-Adding resources from a repository to the workbench</a>&nbsp;<a href="../tasks/tasks-103.htm"><br>
-Replacing resources with a repository
-        version</a><a href="../tasks/tasks-111.htm"><br>
-Creating a new stream</a><a href="../tasks/tasks-117.htm"><br>
-Associating a project with a stream</a><a href="../tasks/tasks-115.htm"><br>
-Synchronizing with a stream</a><a href="../tasks/tasks-113.htm"><br>
-Catching up</a><a href="../tasks/tasks-113b.htm"><br>
-Resolving conflicts and merging changes</a><a href="../tasks/tasks-100b.htm"><br>
-Merging from a stream</a><a href="../tasks/tasks-114.htm"><br>
-Releasing resources to the stream</a><a href="../tasks/tasks-100.htm"><br>
+Creating a CVS repository location</a><a href="../tasks/tasks-96.htm"><br>
+Checking out a project from a CVS repository</a>&nbsp;<a href="../tasks/tasks-103.htm"><br>
+Replacing resources in the workbench</a><a href="../tasks/tasks-117.htm"><br>
+Sharing a new project using CVS</a><a href="../tasks/tasks-115.htm"><br>
+Synchronizing with the repository</a><a href="../tasks/tasks-113.htm"><br>
+Updating</a><a href="../tasks/tasks-113b.htm"><br>
+Resolving conflicts </a><a href="../tasks/tasks-100b.htm"><br>
+Merging from a branch</a><a href="../tasks/tasks-114.htm"><br>
+Committing</a><a href="../tasks/tasks-100.htm"><br>
 Creating a version of a project</a><a href="../tasks/tasks-118.htm"><br>
-Versioning projects in the stream</a>
+Versioning projects in the repository</a>
 </p>
 
 <p>
