--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-6.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-6.htm
@@ -10,7 +10,7 @@
 <H1 CLASS="Head">
 Editors</H1>
 <P CLASS="Para" Label=Type>
-Most perspectives in the workbench comprise an editor area and one or more
+Most perspectives in the workbench are comprised of an editor area and one or more
 views. </P>
 <P CLASS="Para" Label=Type>You can associate different editors with different
 types of files. When you open a file for editing, for example by double-clicking
