Enabling and disabling breakpoints

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-144b.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-144b.htm
@@ -4,24 +4,32 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Adding breakpoints</title>
+<title>Enabling and disabling breakpoints</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
-Adding breakpoints</H1>
-<P CLASS="Para">
-Line breakpoints are set on an executable line of a program.</P>
+Enabling and disabling breakpoints</H1>
+
+Do one of the following sets of tasks:
+<ul>
 <ol>
-  <li>In the editor area, open the file where you want to add the breakpoint.</li>
+  <li>In the editor area, open the file where you want to enable or disable a breakpoint.</li>
   <li>
 <P CLASS="Para">
 Directly to the left of the line where you want to add the breakpoint, open the 
-marker bar pop-up menu and select <b>Add Breakpoint. </b>A new breakpoint marker 
-appears on the marker bar, directly to the left of the line where you added the 
-breakpoint. Also, the new breakpoint appears in the Breakpoints view list.</P>
-  </li>
+marker bar pop-up menu and select <b>Enable Breakpoint</b> or <b>Disable Breakpoint</b> depending on the current state of the breakpoint.
+</li>
 </ol>
+<ol>
+  <li>In the <b>Breakpoints view</b> select the breakpoint(s) to be enabled or diabled.</li>
+  <li>
+<P CLASS="Para">
+In the context menu of the view, select <b>Enable</b> or <b>Disable</b>.
+</li>
+</ol>
+</ul>
+If the breakpoint is enabled, its image will be a blue circle and if it is disabled the image will be a white circle</P>  
 <P>
 While the breakpoint is enabled, thread execution suspends before that line of code is executed. The debugger selects the thread that has suspended and displays the stack frames on that thread's stack. The line where the breakpoint was set is highlighted in the editor in the Debug perspective.</P>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
@@ -33,10 +41,8 @@ While the breakpoint is enabled, thread execution suspends before that line of c
 <a href="../tasks/tasks-146.htm">Applying hit counts</a><br>
 <a href="../tasks/tasks-147.htm">Catching Java exceptions</a><br>
 <a href="../tasks/tasks-144a.htm">Removing breakpoints</a><br>
-<a href="../tasks/tasks-144b.htm">Enabling and disabling breakpoints</a><br>
 <a href="../tasks/tasks-145.htm">Setting method breakpoints</a> <br>
-<a href="../tasks/tasks-136.htm">Stepping through 
-the execution of a program</a></p>
+<a href="../tasks/tasks-136.htm">Stepping through the execution of a program</a></p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
 <p><a href="../reference/ref-35.htm">Breakpoints view</a></p>
 <P>
@@ -46,10 +52,6 @@ the execution of a program</a></p>
 <img src = ../images/ngibmcpy.gif width="195" height="12">
 
 </P>
-
-
-
-
 
 </BODY>
 </HTML>
