--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-147.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-147.htm
@@ -52,8 +52,9 @@ Uncaught</b></SPAN>
 <a href="../concepts/cbrkpnts.htm">Breakpoints</a></p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
 <p dir="ltr"><a href="../tasks/tasks-134.htm">Suspending threads</a><br>
-<a href="../tasks/tendisbp.htm">Enabling and disabling breakpoints</a><br>
 <a href="../tasks/tasks-144.htm">Adding breakpoints</a><br>
+<a href="../tasks/tasks-144a.htm">Removing breakpoints</a><br>
+<a href="../tasks/tasks-144b.htm">Enabling and disabling breakpoints</a><br>
 <a href="../tasks/tasks-145.htm">Setting method breakpoints</a><br>
 &nbsp;</p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
