--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-144a.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-144a.htm
@@ -33,12 +33,11 @@ view</b>.
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
 <p>
 <a href="../tasks/tasks-144.htm">Adding breakpoints</a><br>
+<a href="../tasks/tasks-144b.htm">Enabling and disabling breakpoints</a><br>
 <a href="../tasks/tasks-146.htm">Applying hit counts</a><br>
 <a href="../tasks/tasks-147.htm">Catching Java exceptions</a><br>
-<a href="tendisbp.htm">Enabling and disabling breakpoints</a><br>
 <a href="../tasks/tasks-145.htm">Setting method breakpoints</a> <br>
-<a href="../tasks/tasks-136.htm">Stepping through 
-the execution of a program</a></p>
+<a href="../tasks/tasks-136.htm">Stepping through the execution of a program</a></p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
 <p><a href="../reference/ref-35.htm">Breakpoints view</a></p>
 <P>
@@ -48,10 +47,6 @@ the execution of a program</a></p>
 <img src = ../images/ngibmcpy.gif width="195" height="12">
 
 </P>
-
-
-
-
 
 </BODY>
 </HTML>
