--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/fontsandcolors.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/fontsandcolors.htm
@@ -1,7 +1,7 @@
 <!doctype html public "-//w3c//dtd html 3.2 final//en">
 
 <head>
- <title>Fonts and Colors in Eclipse/title&gt;</title>
+ <title>Fonts and Colors in Eclipse</title>
   <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css"> 
  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
