--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-34a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-34a.htm
@@ -18,7 +18,7 @@ three approaches:</P>
   <li>
     external editors launched by the workbench</li>
   <li>
-    embedded OLE documents <img align="texttop" border="0" src="../images/win_only.gif" alt="Windows only" width="49" height="13"></li>
+    embedded OLE documents <img align="texttop" border="0" src="../images/win_only.gif" alt="Windows only" ></li>
   <li>
     external editors launched without the workbench's knowledge</li>
 </ul>
@@ -26,20 +26,20 @@ three approaches:</P>
 contains the following resources:</p>
 <blockquote>
   <blockquote>
-    <p CLASS="Para" align="center"><img align="texttop" border="0" src="../images/Image44_confirm_state.jpg" alt="Navigator view" align="left" width="230" height="206"></p>
+    <p CLASS="Para" align="center"><img align="texttop" border="0" src="../images/Image44_confirm_state.jpg" alt="Navigator view" align="left" ></p>
   </blockquote>
 </blockquote>
 
 
 <P><a href="qs-34b.htm">
-<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+<img border="0" src="../images/ngnext.gif" alt="Next topic" > 
 External editors</a><P><a href="qs-32.htm">
-<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" > 
 Deleting resources</a><br>
 
 
 <P>
-<P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+<P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
 
 </P>
 
