--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39e.htm
@@ -118,22 +118,22 @@ another.</P>
 </TR>
 </TBODY>
 </TABLE>
-<P>&nbsp;<img align="texttop" border="0" src="../images/Image57_two_editors.jpg" width="641" height="502"><br>
+<P>&nbsp;<img align="texttop" border="0" src="../images/Image57_two_editors.jpg" alt="Two editors"><br>
 </P>
 
 
 <P><a href="qs-39f.htm">
-<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+<img border="0" src="../images/ngnext.gif" alt="Next topic" > 
 Rearranging tabbed views</a></P>
 
 
 <P><a href="qs-39d.htm">
-<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" > 
 Rearranging views</a></P>
 
 
 <P>
-<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
 
 </P>
 
