--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61f_syncproject.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61f_syncproject.htm
@@ -53,7 +53,7 @@ In the Navigator view select the project JanesTeamProject.</P>
       <P CLASS="Para"> From the project's context menu choose Team &gt; Synchronize 
         with Repository.</P>
 <blockquote>
-  <p><img align="texttop" border="0" src="../images/Image82_repo_sync1.jpg" width="408" height="422"></p>
+  <p><img align="texttop" border="0" src="../images/Image82_repo_sync1.jpg" width="408" height="422" alt="Set Project Sharing"></p>
 </blockquote>
 </TD>
 </TR>
@@ -78,7 +78,7 @@ Observe that the Team perspective automatically opens. The title of the workbenc
 window and the shortcut bar both reflect the fact that the Team perspective is
 active, and consequently the Resource perspective is no longer active.
 <blockquote>
-  <p><img align="texttop" border="0" src="../images/Image82_repo_team.jpg" width="201" height="230"></p>
+  <p><img align="texttop" border="0" src="../images/Image82_repo_team.jpg" width="201" height="230" alt="Team Perspective"></p>
 </blockquote>
 </TD>
 </TR>
@@ -91,13 +91,14 @@ to use this view to release our work to the repository.
 
 
 <blockquote>
-  <P><img align="texttop" border="0" src="../images/image82_repo_syncview.jpg" width="484" height="364">
+  <P><img align="texttop" border="0" src="../images/image82_repo_syncview.jpg" width="484" height="364" alt="Release mode sych view">
 </P>
 
 
 </blockquote>
 <P>&nbsp;<br>
-<img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+
 </P>
 
 
