--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62b_sync.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62b_sync.htm
@@ -21,7 +21,7 @@ others have made (update).
 </P>
 
 <blockquote>
-  <P><img align="texttop" border="0" src="../images/image82_repo_syncview.jpg" width="484" height="364">
+  <P><img align="texttop" border="0" src="../images/image82_repo_syncview.jpg"  alt="Synchonize - Release Mode">
 </P>
 
 
@@ -55,7 +55,8 @@ synchronization modes that we will examine in a later section.
 <p>The lower toolbar (B) allows you to merge changes between your file and the
 repository copy of the file.</p>
 <P><br>
-<img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+
 </P>
 
 
