--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62c_releasing.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62c_releasing.htm
@@ -31,7 +31,7 @@ ahead and commit the work we have done.
 In the Structured Compare list select file1.txt</P>
 <blockquote>
 <P CLASS="Para">
-<img align="texttop" border="0" src="../images/Image82_repo_release.jpg" width="181" height="111"></P>
+<img align="texttop" border="0" src="../images/Image82_repo_release.jpg"  alt="Structure Compare"></P>
 </blockquote>
 </TD>
 </TR>
@@ -58,7 +58,7 @@ comment.</P>
 <TD valign="top" align="left">
 Observe that file1.txt is no longer in the list.
 <blockquote>
-  <p><img align="texttop" border="0" src="../images/Image82_repo_release2.jpg" width="176" height="98"></p>
+  <p><img align="texttop" border="0" src="../images/Image82_repo_release2.jpg"  alt="Structure Compare"></p>
 </blockquote>
   <p>In addition to committing individual resources we can also select
 the project and commit all of the changes in the project.</p>
@@ -92,7 +92,7 @@ Click on the Resource perspective button in the shortcut bar (at the far left of
 the window).
 <blockquote>
   <blockquote>
-    <p><img align="texttop" border="0" src="../images/image82_repo_res.jpg" width="113" height="182"></p>
+    <p><img align="texttop" border="0" src="../images/image82_repo_res.jpg"  alt="Resource Perspective"></p>
   </blockquote>
 </blockquote>
 </TD>
@@ -120,7 +120,7 @@ Repository again from the context menu.
 <p>When the
 Synchronize view opens, there is only one change, the new file3.txt.</p>
 <blockquote>
-  <p><img align="texttop" border="0" src="../images/Image82_repo_rel5.jpg" width="282" height="113"></p>
+  <p><img align="texttop" border="0" src="../images/Image82_repo_rel5.jpg" alt="Release mode"></p>
 </blockquote>
 </TD>
 </TR>
@@ -135,7 +135,8 @@ Select file3.txt, and choose Commit from the context menu.
 </TBODY>
 </TABLE>
 <P>&nbsp;<br>
-<img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+
 </P>
 
 
