--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64b_fredadd.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64b_fredadd.htm
@@ -33,7 +33,7 @@ In the Repositories view context menu choose New &gt;&nbsp; CVS
     Repository Location...
 <blockquote>
   <blockquote>
-    <p><img align="texttop" border="0" src="../images/Image82_repo_new.jpg" width="291" height="129"></p>
+    <p><img align="texttop" border="0" src="../images/Image82_repo_new.jpg" alt="Context menu" width="496" height="137" ></p>
   </blockquote>
 </blockquote>
 <P CLASS="Para">
@@ -67,7 +67,7 @@ expand Streams, then expand HEAD.</P>
 Jane created.</P>
 <blockquote>
   <blockquote>
-    <P CLASS="Para"><img align="texttop" border="0" src="../images/Image83_fred1.jpg" width="248" height="153"></P>
+    <P CLASS="Para"><img align="texttop" border="0" src="../images/Image83_fred1.jpg" alt="Repositories View" width="248" height="153"></P>
   </blockquote>
 </blockquote>
 </TD>
@@ -79,7 +79,7 @@ Jane created.</P>
 <TD valign="top" align="left">
 Expand folder1 and you should see the three files that Jane created.
 <blockquote>
-  <p><img align="texttop" border="0" src="../images/Image83_fred2.jpg" width="248" height="194"></p>
+  <p><img align="texttop" border="0" src="../images/Image83_fred2.jpg" alt="Repositories View" width="248" height="194" ></p>
 </blockquote>
 </TD>
 </TR>
@@ -90,7 +90,7 @@ Expand folder1 and you should see the three files that Jane created.
 <TD valign="top" align="left">
 Select the project and choose Add to Workspace from the context menu.
 <blockquote>
-  <p><img align="texttop" border="0" src="../images/Image83_fred3_add.jpg" width="312" height="138"></p>
+  <p><img align="texttop" border="0" src="../images/Image83_fred3_add.jpg" alt="Add to Workspace"></p>
 </blockquote>
 </TD>
 </TR>
