--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64b_fredmod.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64b_fredmod.htm
@@ -79,13 +79,13 @@ Modify file2.txt as follows
 <P CLASS="Para">In the Navigator view&nbsp; click the views pull-down menu and
 choose Show Version Info.</P>
 <blockquote>
-  <P CLASS="Para"><img align="texttop" border="0" src="../images/Image83_fred_info.jpg" ></P>
+  <P CLASS="Para"><img align="texttop" border="0" src="../images/Image83_fred_info.jpg" alt="Navigator View" width="341" height="133" ></P>
 </blockquote>
 <P CLASS="Para">Observe that the Navigator updates to show the version information.
 Notice that the two files which Fred has changed are preceded by
 &quot;&gt;&quot;.</P>
 <blockquote>
-  <P CLASS="Para"><img align="texttop" border="0" src="../images/Image83_fred_verson.jpg" >&nbsp;</P>
+  <P CLASS="Para"><img align="texttop" border="0" src="../images/Image83_fred_verson.jpg" alt="Navigator View" width="297" height="200" >&nbsp;</P>
 </blockquote>
 </TD>
 </TR>
