--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_mod.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_mod.htm
@@ -62,13 +62,13 @@ Modify file3.txt as follows
 <P CLASS="Para">In the Navigator view&nbsp; click the views pull-down menu and
 choose Show Version Info.</P>
 <blockquote>
-  <P CLASS="Para"><img align="texttop" border="0" src="../images/Image83_fred_info.jpg" ></P>
+  <P CLASS="Para"><img align="texttop" border="0" src="../images/Image83_fred_info.jpg" alt="Navigator View" width="341" height="133" ></P>
 </blockquote>
 <P CLASS="Para">Observe that the Navigator updates to show the version information.
 Notice that the two files we have changed are preceded by
 &quot;&gt;&quot;.</P>
 <blockquote>
-  <P CLASS="Para"><img align="texttop" border="0" src="../images/Image83_jane1.jpg" >&nbsp;</P>
+  <P CLASS="Para"><img align="texttop" border="0" src="../images/Image83_jane1.jpg" alt="Navigator View" width="249" height="159" >&nbsp;</P>
 </blockquote>
 <p>&nbsp;
 </TD>
@@ -111,7 +111,7 @@ someone else (namely Fred) made changes to the same resource as the one you want
 to release.</p>
 <p>The second thing worth noting is that the status bar has red text indicating
 what changes need to be considered.</p>
-<p><img align="texttop" border="0" src="../images/Image83_jane3_status.jpg" >
+<p><img align="texttop" border="0" src="../images/Image83_jane3_status.jpg" alt="Status line" width="308" height="22" >
 </TD>
 </TR>
 <TR>
@@ -122,7 +122,7 @@ what changes need to be considered.</p>
 </TD>
 <TD valign="top" align="left">
 Select file1.txt (the incoming change). The comparison viewer shows:&nbsp;
-<p><img align="texttop" border="0" src="../images/Image83_jane4.jpg">
+<p><img align="texttop" border="0" src="../images/Image83_jane4.jpg" alt="Compare View" width="484" height="114">
 </TD>
 </TR>
 </TBODY>
