--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync2.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync2.htm
@@ -26,7 +26,7 @@ changes.&nbsp;</p>
 <TD valign="top" align="left">
 Confirm that the Synchronize view is in Catch Up Mode (#1). If not then press the
 Catch Up Mode button on the local toolbar (#2).
-<p><img align="texttop" border="0" src="../images/Image83_jane5a.jpg" ></p>
+<p><img align="texttop" border="0" src="../images/Image83_jane5a.jpg" alt="Catch up mode" width="481" height="128" ></p>
 <p>&nbsp;
 </TD>
 </TR>
@@ -39,7 +39,7 @@ Catch Up Mode button on the local toolbar (#2).
 <TD valign="top" align="left">
 Select file1.txt (the incoming change). The comparison viewer shows that&nbsp;the
 repository copy of file1.txt has a new line inserted (Fred-Update).
-<p><img align="texttop" border="0" src="../images/Image83_jane4.jpg" >
+<p><img align="texttop" border="0" src="../images/Image83_jane4.jpg" alt="Text Compare" width="484" height="114" >
 </TD>
 </TR>
 <TR>
@@ -63,7 +63,7 @@ workbench to be updated with the Repository copy of file1.txt.
 Select file2.txt. The comparison viewer shows that&nbsp;the repository copy of
 file1.txt and our copy of file1.txt have both had the exact same line
 modified.&nbsp;
-<p><img align="texttop" border="0" src="../images/Image83_jane6a.jpg" >
+<p><img align="texttop" border="0" src="../images/Image83_jane6a.jpg" alt="Text Compare" width="485" height="110" >
 </TD>
 </TR>
 <TR>
@@ -76,7 +76,7 @@ about the change. To do this you first need to figure out who made the change
 and why.
 <p>In the Navigator select file2.txt and choose Team &gt; Show in Resource
 History from the context menu.</p>
-<p><img align="texttop" border="0" src="../images/Image84_reshist.jpg" ></p>
+<p><img align="texttop" border="0" src="../images/Image84_reshist.jpg" alt="Resource History" width="483" height="122" ></p>
 </TD>
 </TR>
 <TR>
@@ -119,7 +119,7 @@ changes.&nbsp;
 <p>Looking at the status bar we can see there is still one remaining outgoing
 change to deal with.</p>
 <blockquote>
-  <p><img align="texttop" border="0" src="../images/Image84_status.jpg" ></p>
+  <p><img align="texttop" border="0" src="../images/Image84_status.jpg" alt="Status bar" width="329" height="23" ></p>
 </blockquote>
 </TD>
 </TR>
