--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync_view.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync_view.htm
@@ -15,7 +15,7 @@ If you look closely at the
 title of the Synchronize view you will see that we have started in Catch Up Mode
 (see #1). This is because there are changes in the stream that we should first
 integrate before releasing our own changes.</p>
-<p CLASS="Para"><img align="texttop" border="0" src="../images/Image83_jane2b.jpg" width="482" height="387"></p>
+<p CLASS="Para"><img align="texttop" border="0" src="../images/Image83_jane2b.jpg" width="482" height="387" alt="Catch up mode"></p>
 <p CLASS="Para">It is important to first catch up to changes made to the stream, retest with
 those changes loaded locally with your soon-to-be-released changes and then release your
 changes.&nbsp; By first taking the latest stream changes, and retesting, it helps
