--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-70_replace.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-70_replace.htm
@@ -62,12 +62,12 @@ click the Replace button.</P>
 </TD>
 <TD valign="top" align="left">
 Choose Show Version Info from the Navigator view pull-down menu
-<p><img align="texttop" border="0" src="../images/Image84_replace_info.jpg" width="341" height="133"></p>
+<p><img align="texttop" border="0" src="../images/Image84_replace_info.jpg"  alt="Navigator View"></p>
 <p>Observe that the Navigator indicates that our project JanesTeamProject is
 associated with the HEAD stream (see #1). In addition the &quot;&gt;&quot; (see
 #2) indicator lets us know that we have changed file1.txt (by replacing it with the
 earlier version).&nbsp;</p>
-<p><img align="texttop" border="0" src="../images/Image84_replace2.jpg" width="198" height="105">
+<p><img align="texttop" border="0" src="../images/Image84_replace2.jpg"  alt="File selection">
 </TD>
 </TR>
 <TR>
@@ -95,7 +95,7 @@ context menu in the Navigator.
 
 
 <P>&nbsp;&nbsp;<br>
-<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" ></a>
 </P>
 
 
