--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-74-make-stream.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-74-make-stream.htm
@@ -52,7 +52,7 @@ tell the workbench the name of each special stream. </P>
 <UL CLASS="UnorderedList">
 
 </UL>
-<p><img align="texttop" border="0" src="../images/Image86_stream.jpg" width="308" height="398">
+<p><img align="texttop" border="0" src="../images/Image86_stream.jpg"  alt="Stream dialog">
 </TD>
 </TR>
 <TR>
@@ -80,7 +80,7 @@ streams to choose from, HEAD and Sample.&nbsp;&nbsp;
 </TBODY>
 </TABLE>
 <P>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" ></a>
 </P>
 
 
