--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-9b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-9b.htm
@@ -26,7 +26,7 @@
 </p>
 
 <p>To restore the view to its original location (to delete the fast 
-  view), click on the Fast View icon <img src="../images/tasks-7.gif" width="16" height="16">
+  view), click on the Fast View icon <img src="../images/tasks-7.gif"  alt="Fast view icon">
   in the title bar of the view.
 </p>
 
