--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35.htm
@@ -34,7 +34,7 @@ setup:</P>
       <td valign="top" align="left"><P CLASS="Para">You
         navigator should be as follows:</P>
         <blockquote>
-        <P CLASS="Para"><img align="texttop" border="0" src="../images/Image44_confirm_state.jpg" alt="Navigator view" width="230" height="206">
+        <P CLASS="Para"><img align="texttop" border="0" src="../images/Image44_confirm_state.jpg" alt="Navigator view" >
         .&nbsp;&nbsp;</P>
         </blockquote>
       </td>
@@ -70,18 +70,18 @@ setup:</P>
         Select the project JaneQUser. Using the project's popup menu create a folder named
         JanesOtherFolder.&nbsp;
         <blockquote>
-          <p><img align="texttop" border="0" src="../images/Image45_setup.jpg" alt="Navigator view" width="230" height="205"></p>
+          <p><img align="texttop" border="0" src="../images/Image45_setup.jpg" alt="Navigator view" ></p>
         </blockquote>
       </td>
     </tr>
   </tbody>
 </table>
 <p>&nbsp;&nbsp;<P><a href="qs-35b.htm">
-<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+<img border="0" src="../images/ngnext.gif" alt="Next topic" > 
 Copying</a><p><a href="qs-34d.htm">
-<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" > 
 Editing files outside the workbench</a><br>
-<P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+<P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" ></a>
 
 </p>
 
