--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39.htm
@@ -53,7 +53,7 @@ selecting Eclipse Platform.</P>
 </P>
 
 
-<P>&nbsp;<img align="texttop" border="0" src="../images/Image55_reset.jpg" width="641" height="502">
+<P>&nbsp;<img align="texttop" border="0" src="../images/Image55_reset.jpg" alt="Workbench after reset">
 </P>
 
 
