--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39c.htm
@@ -20,7 +20,7 @@ rearranging views.</P>
 <TR>
 <TD height="38" valign="top" align="left">
 <P CLASS="Para">
-<img align="texttop" border="0" src="../images/drop_top_source.gif" width="20" height="20">
+<img align="texttop" border="0" src="../images/drop_top_source.gif" alt="Up arrow">
 </P>
 </TD>
 <TD height="38" valign="top" align="left">
@@ -32,7 +32,7 @@ view will appear above the view underneath the cursor.</P>
 <TR>
 <TD height="38" valign="top" align="left">
 <P CLASS="Para">
-<img align="texttop" border="0" src="../images/drop_bottom_source.gif" width="20" height="20">
+<img align="texttop" border="0" src="../images/drop_bottom_source.gif" alt="Down arrow">
 </P>
 </TD>
 <TD height="38" valign="top" align="left">
@@ -42,7 +42,7 @@ Dock below: if you release the mouse button when a dock below cursor is displaye
 </TR>
 <TR>
 <TD height="38" valign="top" align="left">
-<P CLASS="Para"><img align="texttop" border="0" src="../images/drop_right_source.gif" width="20" height="20">
+<P CLASS="Para"><img align="texttop" border="0" src="../images/drop_right_source.gif" alt="Right arrow">
 </P>
 </TD>
 <TD height="38" valign="top" align="left">
@@ -52,7 +52,7 @@ Dock to the right: If you release the mouse button when a dock to the right curs
 </TR>
 <TR>
 <TD height="38" valign="top" align="left">
-<img align="texttop" border="0" src="../images/drop_left_source.gif" width="20" height="20">
+<img align="texttop" border="0" src="../images/drop_left_source.gif"  alt="Left arrow">
 </TD>
 <TD height="38" valign="top" align="left">
 Dock to the left: if you release the mouse button when a dock to the left cursor is displayed, the view will appear to the left of the view underneath the cursor.
@@ -60,7 +60,7 @@ Dock to the left: if you release the mouse button when a dock to the left cursor
 </TR>
 <TR>
 <TD height="38" valign="top" align="left">
-<img align="texttop" border="0" src="../images/drop_stack.gif" width="20" height="20">
+<img align="texttop" border="0" src="../images/drop_stack.gif"  alt="Stack icon">
 </TD>
 <TD height="38" valign="top" align="left">
 Stack: if you release the mouse button when a stack cursor is displayed, the view will appear as a Tab in the same pane as the view underneath the cursor.
@@ -68,7 +68,7 @@ Stack: if you release the mouse button when a stack cursor is displayed, the vie
 </TR>
 <TR>
 <TD height="38" valign="top" align="left">
-<img align="texttop" border="0" src="../images/drop_invalid_source.gif" width="21" height="21">
+<img align="texttop" border="0" src="../images/drop_invalid_source.gif" alt="Restricted icon">
 </TD>
 <TD height="38" valign="top" align="left">
 Restricted: if you release the mouse button when a restricted cursor is displayed, the view will not dock there.  For example, you cannot dock a view in the editor area.
@@ -79,14 +79,14 @@ Restricted: if you release the mouse button when a restricted cursor is displaye
 
 
 <P><a href="qs-39d.htm">
-<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+<img border="0" src="../images/ngnext.gif" alt="Next topic" > 
 Rearranging views</a><P><a href="qs-39.htm">
-<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" > 
 Rearranging views and editors</a></P>
 
 
 <P>
-<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" ></a>
 
 </P>
 
