--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64a_another.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64a_another.htm
@@ -71,7 +71,8 @@ Both you and the repository have modifications to the same resource.
 
 
 <P><br>
-<img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+
 </P>
 
 
