--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync3_rel.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync3_rel.htm
@@ -27,7 +27,7 @@ remaining outgoing change.&nbsp;</p>
 Place the Synchronize view into release mode by clicking on the Release Mode
 button (#1) and confirming that the title of the view now indicates we are in Release
 Mode (#2).
-<p><img align="texttop" border="0" src="../images/Image84_relmode.jpg" width="483" height="110"></p>
+<p><img align="texttop" border="0" src="../images/Image84_relmode.jpg" width="483" height="110" alt="Release mode"></p>
 <p>&nbsp;
 </TD>
 </TR>
@@ -48,7 +48,7 @@ Select file3.txt (the outgoing change).&nbsp;
 <TD valign="top" align="left">
  The comparison viewer shows that&nbsp;our copy of file3.txt has a change to the
 second line.&nbsp; The repository copy is shown in the right pane.
-<p><img align="texttop" border="0" src="../images/Image84_jane.jpg" width="484" height="92">
+<p><img align="texttop" border="0" src="../images/Image84_jane.jpg" width="484" height="92" alt="Text compare">
 </TD>
 </TR>
 <TR>
