--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-74_version.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-74_version.htm
@@ -83,7 +83,7 @@ JaneTeamProject there is now a version of this project whose version number is
 A1. Looking closely at the contents of folder1 you can also see that the version
 numbers of the individual files match the version numbers in our workbench.</P>
 <blockquote>
-  <p><img align="texttop" border="0" src="../images/Image85_version2.jpg" width="250" height="363"></p>
+  <p><img align="texttop" border="0" src="../images/Image85_version2.jpg" alt="Repositories View"></p>
 </blockquote>
 </TD>
 </TR>
