--- a/bundles/org.eclipse.platform.doc.user/tasks/taccess.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/taccess.htm
@@ -32,7 +32,7 @@ major sets of documentation available. </p>
   <li><p>
   To synchronize the navigation frame with the current topic, click the
     <b>Synchronize</b> button
-  <img border="0" src="../images/synchronize.gif">. This is helpful if you have followed several links to
+  <img border="0" src="../images/synchronize.gif" alt="Synchonize button" >. This is helpful if you have followed several links to
     related topics in several files, and want to see where the current topic
     fits into the navigation path.</li>
 </ol>
@@ -53,7 +53,7 @@ Showing and hiding the navigation frame</h2>
 <p>To increase the space
 available for viewing the help content, the navigation frame can be hidden.To hide the navigation frame, click the 
 <b>Toggle Navigation</b> button
-<img border="0" src="../images/hidenav.gif" alt="Navigation button" width="16" height="16">
+<img border="0" src="../images/hidenav.gif" alt="Navigation button" >
 on the Help view's toolbar. To show it, click the button again.</p>
 
 <h2>Printing online help</h2>
@@ -61,15 +61,15 @@ on the Help view's toolbar. To show it, click the button again.</p>
 <ol>
   <li>Select the topic in the navigation frame.</li>
   <li>Click the <b>Print</b> button
-  <img border="0" src="../images/print.gif" alt="Print button" width="16" height="16">
+  <img border="0" src="../images/print.gif" alt="Print button" >
     in the Help toolbar.</li>
   <li>Select the desired printer settings, and click <b>Print</b>.</li>
 </ol>
 <p>
-<img border="0" src="../images/ngrelc.gif" alt="Related concepts" WIDTH="159" HEIGHT="27"><br>
+<img border="0" src="../images/ngrelc.gif" alt="Related concepts" ><br>
 <a href="../concepts/chelpsys.htm">Online help system</a></p>
 <p>
-<img border="0" src="../images/ngrelt.gif" alt="Related tasks" WIDTH="159" HEIGHT="27"><br>
+<img border="0" src="../images/ngrelt.gif" alt="Related tasks" ><br>
 <a href="tsearch.htm">Searching online help</a><br>
 <a href="tf1help.htm">Accessing context-sensitive help</a></p>
 
