--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-9f.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-9f.htm
@@ -17,7 +17,7 @@ open the Debug perspective to debug a Java program.
 <p>To open a new perspective:</p>
 <ol>
   <li>Click the <b>Open Perspective</b> button 
-      <img border="0" src="../images/ref-52.gif" width="16" height="16"> 
+      <img border="0" src="../images/ref-52.gif" width="16" height="16" alt="Open Perspective button"> 
       on the shortcut bar on the left side of the workbench window. (This provides 
       the same function as the <b>Window &gt; Open Perspective</b> menu on the menu bar.)</li>
   <li> To see a complete list of perspectives, select <b>Other</b>
