*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-27b.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-27b.htm
@@ -40,34 +40,27 @@
   workbench to the branch. As a result, these changes are then seen as incoming 
   changes when other developers update from the branch later.</p>
 
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="concepts-26.htm">Team programming</a> &nbsp;<a href="concepts-27c.htm"><br>
-Repositories</a><a href="concepts-27v.htm"><br>
-Repositories view</a><a href="../reference/ref-51a.htm"><br>
-</a><a href="concepts-30.htm">
-Team synchronization</a>&nbsp;</p>
-
-
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="../tasks/tasks-92.htm"><br>
-</a><a href="../tasks/tasks-96.htm">
-Adding resources from a repository to the workbench</a>&nbsp;<a href="../tasks/tasks-111.htm"><br>
-Creating a new stream</a><a href="../tasks/tasks-117.htm"><br>
-Associating a project with a stream</a><a href="../tasks/tasks-119.htm"><br>
-Viewing the history of a stream resource</a><a href="../tasks/tasks-100a.htm"><br>
-Splitting from a stream</a><a href="../tasks/tasks-115.htm"><br>
-Synchronizing with a stream</a><a href="../tasks/tasks-113.htm"><br>
-Catching up</a><a href="../tasks/tasks-113b.htm"><br>
-Resolving conflicts and merging changes</a><a href="../tasks/tasks-100b.htm"><br>
-Merging from a stream</a><a href="../tasks/tasks-114.htm"><br>
-Releasing resources to the stream</a><a href="../tasks/tasks-100.htm"><br>
-Creating a version of a project</a><a href="../tasks/tasks-118.htm"><br>
-Versioning projects in the stream</a>
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
+<br><a href="concepts-26.htm">Team programming with CVS</a>
+<br><a href="concepts-27c.htm">CVS Repositories</a>
+<br><a href="concepts-30.htm">Synchronizing with a CVS repository</a>
 </p>
 
 
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><a href="../reference/ref-48b.htm"><br>
-</a><a href="../reference/ref-51a.htm">
-Streams in CVS</a>
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="../tasks/tasks-92.htm"><br>
+  </a><a href="../tasks/tasks-96.htm"> Checking out a project from a CVS repository</a>&nbsp;<a href="../tasks/tasks-117.htm"><br>
+  Sharing a new project using CVS</a><a href="../tasks/tasks-100a.htm"><br>
+Branching</a><a href="../tasks/tasks-115.htm"><br>
+Synchronizing with the repository</a><a href="../tasks/tasks-113.htm"><br>
+Updating</a>
+<br><a href="../tasks/tasks-114.htm">Committing</a>
+<br><a href="../tasks/tasks-113b.htm">Resolving conflicts </a>
+</p>
+
+
+<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
+<br><a href="../reference/ref-47.htm">CVS</a>
+<br><a href="../reference/ref-32.htm">CVS Repositories view</a>
 </p>
 
 
